# adpro-auth

./: .dockerignore  .gitignore  Cargo.toml  GrpcDockerfile  README.md  RestDockerfile  Shuttle.toml
.autometrics/prometheus/data/01HXXM2BFVDFMKJJB3NWGMK50B/: index  meta.json
.autometrics/prometheus/data/01HXXM2BFVDFMKJJB3NWGMK50B/chunks/: 000001
.autometrics/prometheus/data/01HXXQNPWQMDECKA2A8Z0E85R4/: index  meta.json
.autometrics/prometheus/data/01HXXQNPWQMDECKA2A8Z0E85R4/chunks/: 000001
.autometrics/prometheus/data/01HXXQNTH6WMBBQJ5WDCD2FRR0/: index  meta.json
.autometrics/prometheus/data/01HXXQNTH6WMBBQJ5WDCD2FRR0/chunks/: 000001
.autometrics/prometheus/data/01HXXYHEE3VKE2MZ4RG6ESEXY7/: index  meta.json
.autometrics/prometheus/data/01HXXYHEE3VKE2MZ4RG6ESEXY7/chunks/: 000001
.autometrics/prometheus/data/01HXY5D5P16J2B4WZPY4KXKS4H/: index  meta.json
.autometrics/prometheus/data/01HXY5D5P16J2B4WZPY4KXKS4H/chunks/: 000001
.autometrics/prometheus/data/chunks_head/: 000001  000006
.autometrics/prometheus/data/wal/: 00000000  00000001  00000006  00000007  00000008
.autometrics/prometheus/data/wal/checkpoint.00000005/: 00000000
.github/workflows/: cd-grpc.yml  cd-rest.yml
.sqlx/: query-2286c9dcd58b596bac6268c5c686cc35adcbcb5a34498794b7d7e65e3f756378.json  query-558c68fae031acafea6311623bed52277e03c260fc61ac087c57081af7cef9e6.json  query-5ec76566bd86d6852baecf51fbccb09ee590b11e3adc96cd1b215dfefb03c724.json  query-81fe685ab097a8a4ccbcbd3a567b1efa36f39d5ce2448a7728fd2717a9e0d916.json  query-88cd612581db0a25818b9146afbae47dd812c2ed908c23374498c222ff7d5dcc.json  query-a76eafff438558f177c6e33e19e2feeb5d8af38fcbdda6dc983ddbbdd9c2044e.json  query-b326d7175457275b39a846509964c0fc319e69697bc584c7b982970f916342a1.json  query-b4efdd5fb751a710bd6b315bd54caf58e9a633bdbfa589a941ebaa11ab99f8bf.json  query-d390a66163460ec94a5ee1208e84f99cf83ae9e70a248385d6d250c6810c9f5f.json  query-e47922b4c1a8655988b5e732758e0518ddb141ed09643e9f89670a51a8560365.json  query-eba654004b6c7c2385f2bad0cef968992c6c6eb17c37266adc6b8f1a7c413619.json
grpc/: Cargo.toml
grpc/proto/: services.proto
grpc/src/: auth.rs  main.rs  user.rs
migrations/: 20240416062851_users.up.sql  20240423172012_user_balance.down.sql  20240423172012_user_balance.up.sql
rest/: Cargo.toml
rest/src/: main.rs
rest/src/controller/: auth.rs  user.rs
rest/src/model/: user.rs
rest/src/route/: auth.rs  user.rs
shared/: Cargo.toml
shared/src/: lib.rs  typing.rs
src/: guard.rs  main.rs  route.rs  typing.rs
src/model/: user.rs
src/route/: auth.rs  user.rs
