[package]
name = "grpc-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "tls-rustls",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
shared = { path = "../shared" }
tonic = "0.11"
prost = "0.12"
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
http = "1.1.0"

[build-dependencies]
tonic-build = "0.11"
