[package]
name = "rest-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "tls-rustls",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
jsonwebtoken = "9"
rust-argon2 = "2.1.0"
rocket_cors = "0.6.0"
rocket_prometheus = "0.10.0"
shared = { path = "../shared" }
tonic = "0.11"
prost = "0.12"
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
http = "1.1.0"

[build-dependencies]
tonic-build = "0.11"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
